app/assets/stylesheets/playlist_show.scss
.playlist-show-container {
  background-color: rgb(26, 25, 25);
  color: white;
  // height: 100vh;
  height: 70vh;
  // overflow-y: scroll;
  margin-top: 70px;
  padding-top: 20px;
  // padding-bottom: 20px;
  padding-left: 20px;
  display: flex;
  flex-direction: column;

  h1 {
    font-weight: 600;
    margin-bottom: 50px;
    // position: sticky;
  }

  li {
    padding-bottom: 15px;
  }
}

.playlist-tracks-wrapper {
  overflow-y: scroll;
}

.playlist-tracks-header {
  color: white;
  border-bottom: 1px solid #4e4e4e;
  display: flex;
  justify-content: flex-start;
  padding: 0 25px;
  padding-bottom: 10px;
  font-size: 14px;
  margin-top: 15px;

  p:first-child {
    margin-left: 13px;
    width: 40px;
  }

  p:nth-child(2) {
    width: 400px;
  }

  p:nth-child(3) {
    width: 300px;
  }

  p:nth-child(4) {
    width: 350px;
  }

  p:last-child {
    position: absolute;
    right: 50px;
  }
}

.playlist-track-id {
  width: 40px;
}

.playlist-track-name {
  color: white;
  width: 400px;
}

.playlist-album-name {
  width: 300px;
}

.playlist-artist-name {
  width: 350px;
}

